Add more slide tags for linking in section 2.

--- a/slides/2-data_wrangling.ipynb
+++ b/slides/2-data_wrangling.ipynb
@@ -48,7 +48,9 @@
     "slideshow": {
      "slide_type": "slide"
     },
-    "tags": []
+    "tags": [
+     "id_data-cleaning"
+    ]
    },
    "source": [
     "## Data cleaning\n",
@@ -277,7 +279,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_dropping-columns"
+    ]
    },
    "source": [
     "### Dropping columns\n",
@@ -499,7 +503,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_renaming-columns"
+    ]
    },
    "source": [
     "### Renaming columns\n",
@@ -558,7 +564,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_type-conversion"
+    ]
    },
    "source": [
     "### Type conversion\n",
@@ -664,7 +672,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_creating-new-columns"
+    ]
    },
    "source": [
     "### Creating new columns\n",
@@ -864,7 +874,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_sorting-by-values"
+    ]
    },
    "source": [
     "### Sorting by values\n",
@@ -1075,7 +1087,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_nlargest-and-nsmallest"
+    ]
    },
    "source": [
     "To pick out the largest/smallest rows, use `nlargest()` / `nsmallest()` instead. Looking at the 3 trips with the longest elapsed time, we see some possible data integrity issues:"
@@ -1413,7 +1427,9 @@
     "slideshow": {
      "slide_type": "slide"
     },
-    "tags": []
+    "tags": [
+     "id_working-with-the-index"
+    ]
    },
    "source": [
     "## Working with the index\n",
@@ -1428,7 +1444,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_setting-the-index"
+    ]
    },
    "source": [
     "### Setting and sorting the index\n",
@@ -1616,7 +1634,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_sorting-the-index"
+    ]
    },
    "source": [
     "Since we have a sample of the full dataset, let's sort the index to order by pickup time:"
@@ -1652,7 +1672,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_working-with-a-datetime-index"
+    ]
    },
    "source": [
     "We can now select ranges from our data based on the datetime the same way we did with row numbers:"
@@ -1997,7 +2019,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_resetting-the-index"
+    ]
    },
    "source": [
     "### Resetting the index\n",
@@ -2589,7 +2613,9 @@
     "slideshow": {
      "slide_type": "slide"
     },
-    "tags": []
+    "tags": [
+     "id_reshaping-data"
+    ]
    },
    "source": [
     "## Reshaping data\n",
@@ -2834,7 +2860,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_melting"
+    ]
    },
    "source": [
     "### Melting\n",
@@ -3040,7 +3068,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_dropna-method"
+    ]
    },
    "source": [
     "This leaves us with some null values (the dates that aren't present in the dataset):"
@@ -3209,7 +3239,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_pivoting"
+    ]
    },
    "source": [
     "### Pivoting\n",
@@ -3360,7 +3392,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_transposing"
+    ]
    },
    "source": [
     "### Transposing\n",
@@ -3502,7 +3536,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_merging"
+    ]
    },
    "source": [
     "### Merging\n",
@@ -3733,7 +3769,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_fillna-method"
+    ]
    },
    "source": [
     "We can take this a step further by marking a few days before and after each holiday as part of the holiday. This would make it easier to compare holiday travel across years and look for any uptick in travel around the holidays:"
@@ -3932,7 +3970,9 @@
     "slideshow": {
      "slide_type": "slide"
     },
-    "tags": []
+    "tags": [
+     "id_aggregations-and-grouping"
+    ]
    },
    "source": [
     "## Aggregations and grouping\n",
@@ -3947,7 +3987,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_pivot-tables"
+    ]
    },
    "source": [
     "### Pivot tables\n",
@@ -4073,7 +4115,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_percent-change"
+    ]
    },
    "source": [
     "We can use the `pct_change()` method on this result to see which holiday travel periods saw the biggest change in travel:"
@@ -4198,7 +4242,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_set-option"
+    ]
    },
    "source": [
     "Let's make one last pivot table with column and row subtotals, along with some formatting improvements. First, we set a display option for all floats:"
@@ -4221,7 +4267,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_numpy-where"
+    ]
    },
    "source": [
     "Next, we group together Christmas Eve and Christmas Day, likewise for New Year's Eve and New Year's Day, and create the pivot table:"
@@ -4362,7 +4410,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_reset-option"
+    ]
    },
    "source": [
     "Before moving on, let's reset the display option:"
@@ -4552,7 +4602,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_crosstabs"
+    ]
    },
    "source": [
     "### Crosstabs\n",
@@ -4677,7 +4729,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_group-by-operations"
+    ]
    },
    "source": [
     "### Group by operations\n",
@@ -4810,7 +4864,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_rank"
+    ]
    },
    "source": [
     "Groups can also be used to perform separate calculations per subset of the data. For example, we can find the highest-volume travel day per year using `rank()`:"
@@ -4904,7 +4960,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_agg-method"
+    ]
    },
    "source": [
     "The previous two examples called a single method on the grouped data, but using the `agg()` method we can specify any number of them:"
@@ -5045,7 +5103,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_agg-with-dict"
+    ]
    },
    "source": [
     "In addition, we can specify which aggregations to perform on each column:"
@@ -5342,7 +5402,9 @@
     "slideshow": {
      "slide_type": "slide"
     },
-    "tags": []
+    "tags": [
+     "id_time-series"
+    ]
    },
    "source": [
     "## Time series\n",
@@ -5357,7 +5419,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_selecting-based-on-date-and-time"
+    ]
    },
    "source": [
     "### Selecting based on date and time\n",
@@ -5716,7 +5780,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_between-time"
+    ]
    },
    "source": [
     "We can pull out the dropoffs that happened between a certain time range on *any* day with the `between_time()` method:"
@@ -5914,7 +5980,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_first-and-last"
+    ]
    },
    "source": [
     "Finally, `head()` and `tail()` limit us to a number of rows, but we may be interested in rows within the first/last 2 hours (or any other time interval) of the data, in which case, we should use `first()` / `last()`:"
@@ -6180,7 +6248,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_calculating-change-over-time"
+    ]
    },
    "source": [
     "### Calculating change over time"
@@ -6355,7 +6425,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_resampling"
+    ]
    },
    "source": [
     "### Resampling\n",
@@ -6499,7 +6571,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_window-calculations"
+    ]
    },
    "source": [
     "### Window calculations\n",
