Add more slide ids for links in section 3.

--- a/slides/3-data_visualization.ipynb
+++ b/slides/3-data_visualization.ipynb
@@ -46,7 +46,9 @@
     "slideshow": {
      "slide_type": "slide"
     },
-    "tags": []
+    "tags": [
+     "id_plotting-with-pandas"
+    ]
    },
    "source": [
     "## Plotting with pandas\n",
@@ -206,7 +208,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_line-plots"
+    ]
    },
    "source": [
     "### Line plots\n",
@@ -2135,7 +2139,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_bar-plots"
+    ]
    },
    "source": [
     "### Bar plots\n",
@@ -2245,7 +2251,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_formatting-with-matplotlib"
+    ]
    },
    "source": [
     "Pandas offers other plot types via the `kind` parameter, so we specify `kind='bar'` when calling the `plot()` method. Then, we further format the visualization using the `Axes` object returned by the `plot()` method:"
@@ -3700,7 +3708,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_plotting-distributions"
+    ]
    },
    "source": [
     "### Plotting distributions\n",
@@ -3725,7 +3735,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_subplots"
+    ]
    },
    "source": [
     "While pandas lets us specify that we want subplots and their layout (with the `subplots` and `layout` parameters, respectively), using Matplotlib to create the subplots directly gives us additional flexibility:"
@@ -6489,7 +6501,9 @@
     "slideshow": {
      "slide_type": "slide"
     },
-    "tags": []
+    "tags": [
+     "id_plotting-with-seaborn"
+    ]
    },
    "source": [
     "## Plotting with Seaborn\n",
@@ -6504,7 +6518,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_visualizing-long-format-data"
+    ]
    },
    "source": [
     "### Visualizing long-format data\n",
@@ -7941,7 +7957,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_heatmaps"
+    ]
    },
    "source": [
     "### Heatmaps\n",
@@ -12695,7 +12713,9 @@
     "slideshow": {
      "slide_type": "slide"
     },
-    "tags": []
+    "tags": [
+     "id_customizing-plots-with-matplotlib"
+    ]
    },
    "source": [
     "## Customizing plots with Matplotlib\n",
@@ -12710,7 +12730,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_adding-shaded-regions"
+    ]
    },
    "source": [
     "### Adding shaded regions\n",
@@ -14133,7 +14155,9 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [
+     "id_adding-annotations"
+    ]
    },
    "source": [
     "### Adding annotations\n",
