Remove reference to soon to be deprecated append() method.

--- a/notebooks/2-data_wrangling.ipynb
+++ b/notebooks/2-data_wrangling.ipynb
@@ -3220,7 +3220,7 @@
     "tags": []
    },
    "source": [
-    "*Tip: There are many parameters for this method, so be sure to check out the [documentation](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.merge.html). To append rows, take a look at `append()` and `pd.concat()`.*"
+    "*Tip: There are many parameters for this method, so be sure to check out the [documentation](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.merge.html). To append rows, take a look at the `pd.concat()` function.*"
    ]
   },
   {
