--- a/slides/0-introduction.ipynb
+++ b/slides/0-introduction.ipynb
@@ -33,9 +33,9 @@
     "\n",
     "- Software engineer and data scientist at Bloomberg in New York City\n",
     "- Working in information security\n",
-    "- Author of [Hands-On Data Analysis with Pandas](https://www.amazon.com/Hands-Data-Analysis-Pandas-visualization-dp-1800563450/dp/1800563450/) (currently in its second edition)\n",
+    "- Author of [Hands-On Data Analysis with Pandas](https://www.amazon.com/Hands-Data-Analysis-Pandas-visualization-dp-1800563450/dp/1800563450/) (currently in its second edition; translated into Korean)\n",
     "- BS in operations research from Columbia University\n",
-    "- Currently pursuing MS in computer science (ML specialization) from Georgia Tech"
+    "- MS in computer science (ML specialization) from Georgia Tech"
    ]
   },
   {
