--- a/notebooks/0-check_your_env.ipynb
+++ b/notebooks/0-check_your_env.ipynb
@@ -17,9 +17,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using Python in /Users/stefanie/miniconda3/envs/pandas_workshop:\n",
-      "\u001b[42m[ OK ]\u001b[0m Python is version 3.10.2 | packaged by conda-forge | (main, Mar  8 2022, 15:57:32) [Clang 11.1.0 ]\n",
-      "\n",
+      "\u001b[42m[ OK ]\u001b[0m Python\n",
       "\u001b[42m[ OK ]\u001b[0m jupyterlab\n",
       "\u001b[42m[ OK ]\u001b[0m matplotlib\n",
       "\u001b[42m[ OK ]\u001b[0m numpy\n",
@@ -31,7 +29,7 @@
     }
    ],
    "source": [
-    "from utils import run_env_check\n",
+    "from check_env import run_env_check\n",
     "run_env_check()"
    ]
   },
@@ -59,7 +57,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
