Add link to slides at the top of each notebook.

--- a/slides/1-getting_started_with_pandas.ipynb
+++ b/slides/1-getting_started_with_pandas.ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "d7d8affa-124f-4132-88ba-6729aab0ff2e",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
+   "source": [
+    "[![View slides in browser](https://img.shields.io/badge/view-slides-orange?logo=reveal.js&logoColor=white)](https://stefmolin.github.io/pandas-workshop/slides/html/workshop.slides.html#/section-1)\n",
+    "\n",
+    "---\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2c0397e0-4592-48dd-90d9-6a6dc95be2f9",
    "metadata": {
     "slideshow": {
@@ -3185,7 +3201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
