--- a/slides/2-data_wrangling.ipynb
+++ b/slides/2-data_wrangling.ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "0ceea5a6-c4bf-48f6-9644-d8d96b635abf",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
+   "source": [
+    "[![View slides in browser](https://img.shields.io/badge/view-slides-orange?logo=reveal.js&logoColor=white)](https://stefmolin.github.io/pandas-workshop/slides/html/workshop.slides.html#/section-2)\n",
+    "\n",
+    "---\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a0745604-3c71-4c7f-8b5c-b6cc0ecec3c3",
    "metadata": {
     "slideshow": {
@@ -8893,7 +8909,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
