--- a/notebooks/1-getting_started_with_pandas.ipynb
+++ b/notebooks/1-getting_started_with_pandas.ipynb
@@ -3,9 +3,14 @@
   {
    "cell_type": "markdown",
    "id": "654d989b-ca3b-4815-94f8-fe640ebbe9d2",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
    "source": [
-    "[![View slides in browser](https://img.shields.io/badge/view-slides-orange?logo=github)](https://stefmolin.github.io/pandas-workshop/slides/html/workshop.slides.html#/section-1)\n",
+    "[![View slides in browser](https://img.shields.io/badge/view-slides-orange?logo=reveal.js&logoColor=white)](https://stefmolin.github.io/pandas-workshop/slides/html/workshop.slides.html#/section-1)\n",
     "\n",
     "---\n",
     "\n"
@@ -2607,7 +2612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
