--- a/slides/0-introduction.ipynb
+++ b/slides/0-introduction.ipynb
@@ -2,6 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "73de9609-9539-483a-a930-1f1b12b79a55",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
+   "source": [
+    "[![View slides in browser](https://img.shields.io/badge/view-slides-orange?logo=reveal.js&logoColor=white)](https://stefmolin.github.io/pandas-workshop/slides/html/workshop.slides.html)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8b7dfb40-1ef0-4621-89c3-87c5b226c023",
    "metadata": {
     "slideshow": {
@@ -109,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
