--- a/slides/3-data_visualization.ipynb
+++ b/slides/3-data_visualization.ipynb
@@ -2,6 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "c80f1fcd-b245-459f-9cb0-723ac3020ddd",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
+   "source": [
+    "[![View slides in browser](https://img.shields.io/badge/view-slides-orange?logo=reveal.js&logoColor=white)](https://stefmolin.github.io/pandas-workshop/slides/html/workshop.slides.html#/section-3)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ca73b481-0ab1-442a-b602-a1dc4c51f396",
    "metadata": {
     "slideshow": {
@@ -17370,7 +17387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
