Tweak exercise placeholders.

--- a/notebooks/2-data_wrangling.ipynb
+++ b/notebooks/2-data_wrangling.ipynb
@@ -1234,7 +1234,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Complete exercise 2.1 in the workbook.ipynb file\n",
+    "# Complete this exercise in the workbook.ipynb file\n",
     "# Click on `Exercise 2.1` above to open the workbook.ipynb file\n",
     "\n",
     "# WARNING: if you complete the exercise here, your cell numbers\n",
@@ -2060,7 +2060,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Complete exercise 2.2 in the workbook.ipynb file"
+    "# Complete this exercise in the workbook.ipynb file"
    ]
   },
   {
@@ -3891,7 +3891,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Complete exercise 2.3 in the workbook.ipynb file\n",
+    "# Complete this exercise in the workbook.ipynb file\n",
     "# Click on `Exercise 2.3` above to open the workbook.ipynb file\n",
     "\n",
     "# WARNING: if you complete the exercise here, your cell numbers\n",
@@ -4550,7 +4550,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Complete exercise 2.4 in the workbook.ipynb file\n",
+    "# Complete this exercise in the workbook.ipynb file\n",
     "# Click on `Exercise 2.4` above to open the workbook.ipynb file\n",
     "\n",
     "# WARNING: if you complete the exercise here, your cell numbers\n",
@@ -7866,7 +7866,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Complete exercise 2.5 in the workbook.ipynb file\n",
+    "# Complete this exercise in the workbook.ipynb file\n",
     "# Click on `Exercise 2.5` above to open the workbook.ipynb file"
    ]
   },
