--- a/notebooks/3-data_visualization.ipynb
+++ b/notebooks/3-data_visualization.ipynb
@@ -5326,7 +5326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Complete exercise 3.1 in the workbook.ipynb file"
+    "# Complete this exercise in the workbook.ipynb file"
    ]
   },
   {
@@ -8711,7 +8711,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Complete exercise 3.2 in the workbook.ipynb file"
+    "# Complete this exercise in the workbook.ipynb file"
    ]
   },
   {
@@ -12150,7 +12150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Complete exercise 3.3 in the workbook.ipynb file"
+    "# Complete this exercise in the workbook.ipynb file"
    ]
   },
   {
@@ -12170,7 +12170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TIP: the solution to exercise 3.1 can be found at\n",
+    "# TIP: the solution to Exercise 3.1 can be found at\n",
     "# https://stefmolin.github.io/pandas-workshop/slides/html/workshop.slides.html#/solution-3-1"
    ]
   },
