--- a/notebooks/1-getting_started_with_pandas.ipynb
+++ b/notebooks/1-getting_started_with_pandas.ipynb
@@ -1046,7 +1046,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Complete exercise 1.1 in the workbook.ipynb file\n",
+    "# Complete this exercise in the workbook.ipynb file\n",
     "# Click on `Exercise 1.1` above to open the workbook.ipynb file\n",
     "\n",
     "# WARNING: if you complete the exercise here, your cell numbers\n",
@@ -1070,7 +1070,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Complete exercise 1.2 in the workbook.ipynb file\n",
+    "# Complete this exercise in the workbook.ipynb file\n",
     "# Click on `Exercise 1.2` above to open the workbook.ipynb file\n",
     "\n",
     "# WARNING: if you complete the exercise here, your cell numbers\n",
@@ -2562,7 +2562,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Complete exercise 1.3 in the workbook.ipynb file\n",
+    "# Complete this exercise in the workbook.ipynb file\n",
     "# Click on `Exercise 1.3` above to open the workbook.ipynb file"
    ]
   },
@@ -2583,7 +2583,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Complete exercise 1.4 in the workbook.ipynb file\n",
+    "# Complete this exercise in the workbook.ipynb file\n",
     "# Click on `Exercise 1.4` above to open the workbook.ipynb file"
    ]
   },
