Split heatmap slide up.

--- a/notebooks/3-data_visualization.ipynb
+++ b/notebooks/3-data_visualization.ipynb
@@ -2268,7 +2268,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1213d8460>"
+       "<matplotlib.legend.Legend at 0x1269e08e0>"
       ]
      },
      "execution_count": 5,
@@ -5404,7 +5404,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1307ba890>"
+       "<seaborn.axisgrid.FacetGrid at 0x144dd7c10>"
       ]
      },
      "execution_count": 11,
@@ -6833,6 +6833,156 @@
    "execution_count": 12,
    "id": "46eafd2b-ffef-4aec-9a88-05342ac3fff6",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>year</th>\n",
+       "      <th>2019</th>\n",
+       "      <th>2020</th>\n",
+       "      <th>2021</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>month</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>59405722.0</td>\n",
+       "      <td>61930286.0</td>\n",
+       "      <td>23598230.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>57345684.0</td>\n",
+       "      <td>60428859.0</td>\n",
+       "      <td>24446345.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>72530252.0</td>\n",
+       "      <td>32995003.0</td>\n",
+       "      <td>38050060.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>70518994.0</td>\n",
+       "      <td>3322548.0</td>\n",
+       "      <td>41826159.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>74617773.0</td>\n",
+       "      <td>7244733.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>76619900.0</td>\n",
+       "      <td>14481802.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>79511968.0</td>\n",
+       "      <td>20740781.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>74776010.0</td>\n",
+       "      <td>21708071.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>66531258.0</td>\n",
+       "      <td>21488263.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>72096495.0</td>\n",
+       "      <td>25636496.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>68787654.0</td>\n",
+       "      <td>25512987.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>70219363.0</td>\n",
+       "      <td>26391765.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "year         2019        2020        2021\n",
+       "month                                    \n",
+       "1      59405722.0  61930286.0  23598230.0\n",
+       "2      57345684.0  60428859.0  24446345.0\n",
+       "3      72530252.0  32995003.0  38050060.0\n",
+       "4      70518994.0   3322548.0  41826159.0\n",
+       "5      74617773.0   7244733.0         NaN\n",
+       "6      76619900.0  14481802.0         NaN\n",
+       "7      79511968.0  20740781.0         NaN\n",
+       "8      74776010.0  21708071.0         NaN\n",
+       "9      66531258.0  21488263.0         NaN\n",
+       "10     72096495.0  25636496.0         NaN\n",
+       "11     68787654.0  25512987.0         NaN\n",
+       "12     70219363.0  26391765.0         NaN"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = tsa_melted_holiday_travel['2019':'2021-04']\\\n",
+    "    .assign(month=lambda x: x.index.month)\\\n",
+    "    .pivot_table(index='month', columns='year', values='travelers', aggfunc='sum')\n",
+    "\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "efccdcd6-2a4f-4c20-856c-9b996da95935",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -8669,10 +8819,6 @@
     }
    ],
    "source": [
-    "data = tsa_melted_holiday_travel['2019':'2021-04']\\\n",
-    "    .assign(month=lambda x: x.index.month)\\\n",
-    "    .pivot_table(index='month', columns='year', values='travelers', aggfunc='sum')\n",
-    "\n",
     "ax = sns.heatmap(data=data / 1e6, cmap='Blues', annot=True, fmt='.1f')\n",
     "_ = ax.set_yticklabels(calendar.month_abbr[1:], rotation=0)\n",
     "_ = ax.set_title('Total TSA Traveler Throughput (in millions)')"
@@ -8715,7 +8861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "e3379920-013d-4df5-9abc-b321060a6891",
    "metadata": {},
    "outputs": [],
@@ -8725,7 +8871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "0ec9abff-224b-49cb-ac0c-bd6955b5dcaf",
    "metadata": {},
    "outputs": [],
@@ -8735,7 +8881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "6d410276-25aa-4c16-9987-4e17930ebced",
    "metadata": {},
    "outputs": [],
@@ -8776,7 +8922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "681a84a7-6b72-4db8-bfd2-994f98b6494c",
    "metadata": {},
    "outputs": [
@@ -10196,7 +10342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "cd8a781f-3a17-445f-8ff2-742086122b67",
    "metadata": {},
    "outputs": [
@@ -12148,7 +12294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "583f952c-2c2e-40ed-9235-fd80a7fe43b7",
    "metadata": {},
    "outputs": [],
@@ -12158,7 +12304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "0b182f1a-33b0-4dde-9d54-e55d7bfeeae3",
    "metadata": {},
    "outputs": [],
@@ -12168,7 +12314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "07394de8-c5fa-4c90-ac5c-e5b6452838c7",
    "metadata": {},
    "outputs": [],
