--- a/slides/3-data_visualization.ipynb
+++ b/slides/3-data_visualization.ipynb
@@ -2300,7 +2300,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1214b3e20>"
+       "<matplotlib.legend.Legend at 0x103c6cd30>"
       ]
      },
      "execution_count": 5,
@@ -6564,7 +6564,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1310eb010>"
+       "<seaborn.axisgrid.FacetGrid at 0x1465bfc70>"
       ]
      },
      "execution_count": 11,
@@ -7995,6 +7995,156 @@
    "execution_count": 12,
    "id": "2c62ab83-8474-44d8-adc7-02eeb277ad71",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>year</th>\n",
+       "      <th>2019</th>\n",
+       "      <th>2020</th>\n",
+       "      <th>2021</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>month</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>59405722.0</td>\n",
+       "      <td>61930286.0</td>\n",
+       "      <td>23598230.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>57345684.0</td>\n",
+       "      <td>60428859.0</td>\n",
+       "      <td>24446345.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>72530252.0</td>\n",
+       "      <td>32995003.0</td>\n",
+       "      <td>38050060.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>70518994.0</td>\n",
+       "      <td>3322548.0</td>\n",
+       "      <td>41826159.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>74617773.0</td>\n",
+       "      <td>7244733.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>76619900.0</td>\n",
+       "      <td>14481802.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>79511968.0</td>\n",
+       "      <td>20740781.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>74776010.0</td>\n",
+       "      <td>21708071.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>66531258.0</td>\n",
+       "      <td>21488263.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>72096495.0</td>\n",
+       "      <td>25636496.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>68787654.0</td>\n",
+       "      <td>25512987.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>70219363.0</td>\n",
+       "      <td>26391765.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "year         2019        2020        2021\n",
+       "month                                    \n",
+       "1      59405722.0  61930286.0  23598230.0\n",
+       "2      57345684.0  60428859.0  24446345.0\n",
+       "3      72530252.0  32995003.0  38050060.0\n",
+       "4      70518994.0   3322548.0  41826159.0\n",
+       "5      74617773.0   7244733.0         NaN\n",
+       "6      76619900.0  14481802.0         NaN\n",
+       "7      79511968.0  20740781.0         NaN\n",
+       "8      74776010.0  21708071.0         NaN\n",
+       "9      66531258.0  21488263.0         NaN\n",
+       "10     72096495.0  25636496.0         NaN\n",
+       "11     68787654.0  25512987.0         NaN\n",
+       "12     70219363.0  26391765.0         NaN"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = tsa_melted_holiday_travel['2019':'2021-04']\\\n",
+    "    .assign(month=lambda x: x.index.month)\\\n",
+    "    .pivot_table(index='month', columns='year', values='travelers', aggfunc='sum')\n",
+    "\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "81424c63-a69f-472e-8266-374c4e449528",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -9831,10 +9981,6 @@
     }
    ],
    "source": [
-    "data = tsa_melted_holiday_travel['2019':'2021-04']\\\n",
-    "    .assign(month=lambda x: x.index.month)\\\n",
-    "    .pivot_table(index='month', columns='year', values='travelers', aggfunc='sum')\n",
-    "\n",
     "ax = sns.heatmap(data=data / 1e6, cmap='Blues', annot=True, fmt='.1f')\n",
     "_ = ax.set_yticklabels(calendar.month_abbr[1:], rotation=0)\n",
     "_ = ax.set_title('Total TSA Traveler Throughput (in millions)')"
@@ -9912,7 +10058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "01bd0785-980f-4c6e-b174-71884010d2fe",
    "metadata": {},
    "outputs": [],
@@ -9939,7 +10085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "82672758-975f-4b76-82a5-1a4a323bbb17",
    "metadata": {},
    "outputs": [],
@@ -9978,7 +10124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "9667ee49-e475-464d-86ad-55d10ec9018b",
    "metadata": {},
    "outputs": [
@@ -9988,7 +10134,7 @@
        "<AxesSubplot:title={'center':'2019 TSA Median Traveler Throughput\\n(in millions)'}, xlabel='month', ylabel='day_of_week'>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -12758,7 +12904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "63853309-4eb8-4de7-889b-4c4cc5ea33e0",
    "metadata": {},
    "outputs": [
@@ -14180,7 +14326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "018c1147-dfc3-49b1-a579-07850db539ef",
    "metadata": {},
    "outputs": [
@@ -16167,7 +16313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "bc5dbd63-4182-4c18-b94c-17bc8c8cd81a",
    "metadata": {},
    "outputs": [],
@@ -16200,7 +16346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "a28c948e-a69c-4cbc-b7ea-99ebda67b1c0",
    "metadata": {},
    "outputs": [],
@@ -16236,7 +16382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "18a749dd-b6a3-417c-a0e9-1a1f7ff5dffe",
    "metadata": {
     "tags": []
@@ -16248,7 +16394,7 @@
        "<AxesSubplot:title={'center':'TSA Traveler Throughput'}, xlabel='year', ylabel='travelers'>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
